@@ -28,7 +28,6 @@ import net.mcreator.preferences.PreferencesManager;
 import net.mcreator.ui.MCreator;
 import net.mcreator.ui.MCreatorTabs;
 import net.mcreator.ui.component.JModElementProgressPanel;
-import net.mcreator.ui.component.ScrollWheelPassLayer;
 import net.mcreator.ui.component.UnsupportedComponent;
 import net.mcreator.ui.component.util.ComponentUtils;
 import net.mcreator.ui.component.util.PanelUtils;
@@ -38,9 +37,13 @@ import net.mcreator.ui.init.L10N;
 import net.mcreator.ui.init.UIRES;
 import net.mcreator.ui.laf.themes.Theme;
 import net.mcreator.ui.modgui.codeviewer.ModElementCodeViewer;
+import net.mcreator.ui.search.ITextFieldSearchable;
 import net.mcreator.ui.validation.AggregatedValidationResult;
 import net.mcreator.ui.validation.ValidationGroup;
+import net.mcreator.ui.variants.modmaker.ModMaker;
 import net.mcreator.ui.views.ViewBase;
+import net.mcreator.util.DesktopUtils;
+import net.mcreator.util.TestUtil;
 import net.mcreator.workspace.elements.FolderElement;
 import net.mcreator.workspace.elements.ModElement;
 import org.apache.logging.log4j.LogManager;
@@ -49,13 +52,16 @@ import org.apache.logging.log4j.Logger;
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.swing.*;
+import javax.swing.text.JTextComponent;
 import java.awt.*;
 import java.lang.reflect.Field;
+import java.net.URI;
 import java.net.URISyntaxException;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 
-public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewBase implements IHelpContext {
+public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewBase
+		implements IHelpContext, ITextFieldSearchable {
 
 	private static final Logger LOG = LogManager.getLogger(ModElementGUI.class);
 
@@ -65,15 +71,17 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 	private boolean changed, listeningEnabled = false;
 	private final ModElementChangedListener elementUpdateListener;
 
-	@Nonnull protected ModElement modElement;
+	@Nonnull protected final ModElement modElement;
 	@Nullable private FolderElement targetFolder;
 
 	private ModElementCreatedListener<GE> modElementCreatedListener;
 
-	private final Map<String, JComponent> pages = new LinkedHashMap<>();
+	private final List<ModElementGUIPage> pages = new ArrayList<>();
 
 	private ModElementCodeViewer<GE> modElementCodeViewer = null;
 	private JSplitPane splitPane;
+
+	private final ModElementGUISearch search = new ModElementGUISearch(this);
 
 	public ModElementGUI(MCreator mcreator, @Nonnull ModElement modElement, boolean editingMode) {
 		super(mcreator);
@@ -87,31 +95,22 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		};
 	}
 
-	public final void addPage(JComponent component) {
-		addPage(component, true);
+	public final ModElementGUIPage addPage(JComponent component) {
+		return addPage(component, true);
 	}
 
-	public final void addPage(JComponent component, boolean scroll) {
-		addPage(modElement.getType().getReadableName(), component, scroll);
+	public final ModElementGUIPage addPage(JComponent component, boolean scroll) {
+		return addPage(modElement.getType().getReadableName(), component, scroll);
 	}
 
-	public final void addPage(String name, JComponent component) {
-		addPage(name, component, true);
+	public final ModElementGUIPage addPage(String name, JComponent component) {
+		return addPage(name, component, true);
 	}
 
-	public final void addPage(String name, JComponent component, boolean scroll) {
-		if (scroll) {
-			JScrollPane splitScroll = new JScrollPane(component);
-			splitScroll.setOpaque(false);
-			splitScroll.getViewport().setOpaque(false);
-			splitScroll.setVerticalScrollBarPolicy(JScrollPane.VERTICAL_SCROLLBAR_AS_NEEDED);
-			splitScroll.setHorizontalScrollBarPolicy(JScrollPane.HORIZONTAL_SCROLLBAR_AS_NEEDED);
-			splitScroll.getVerticalScrollBar().setUnitIncrement(15);
-			splitScroll.getHorizontalScrollBar().setUnitIncrement(15);
-			pages.put(name, new JLayer<>(splitScroll, new ScrollWheelPassLayer()));
-		} else {
-			pages.put(name, component);
-		}
+	public final ModElementGUIPage addPage(String name, JComponent component, boolean scroll) {
+		ModElementGUIPage page = new ModElementGUIPage(name, component, scroll);
+		pages.add(page);
+		return page;
 	}
 
 	public void setTargetFolder(@Nullable FolderElement targetFolder) {
@@ -143,9 +142,9 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		this.tabIn = new MCreatorTabs.Tab(this, modElement);
 
 		ViewBase retval;
-		MCreatorTabs.Tab existing = mcreator.mcreatorTabs.showTabOrGetExisting(this.tabIn);
+		MCreatorTabs.Tab existing = mcreator.getTabs().showTabOrGetExisting(this.tabIn);
 		if (existing == null) {
-			mcreator.mcreatorTabs.addTab(this.tabIn);
+			mcreator.getTabs().addTab(this.tabIn);
 
 			this.tabIn.setTabShownListener(tab -> {
 				if (PreferencesManager.PREFERENCES.ui.autoReloadTabs.get()) {
@@ -162,6 +161,8 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 							JOptionPane.YES_NO_OPTION);
 				return true;
 			});
+
+			this.tabIn.setTabClosedListener(tab -> onViewClosed());
 
 			retval = this;
 		} else {
@@ -180,7 +181,8 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			this.modElementCodeViewer = new ModElementCodeViewer<>(this);
 
 		if (pages.size() > 1) {
-			JModElementProgressPanel split = new JModElementProgressPanel(pages.values().toArray(new Component[0]));
+			JModElementProgressPanel split = new JModElementProgressPanel(
+					pages.stream().map(ModElementGUIPage::getComponent).toArray(Component[]::new));
 
 			Map<Integer, AbstractButton> pagers = new HashMap<>();
 			ButtonGroup buttonGroup = new ButtonGroup();
@@ -193,7 +195,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			back.setContentAreaFilled(false);
 			back.setCursor(new Cursor(Cursor.HAND_CURSOR));
 			back.addActionListener(event -> {
-				AggregatedValidationResult validationResult = validatePage(split.getPage());
+				AggregatedValidationResult validationResult = pages.get(split.getPage()).getValidationResult();
 				if (validationResult.validateIsErrorFree()) {
 					pagers.get(split.getPage()).setIcon(null);
 				} else {
@@ -209,7 +211,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			forward.setContentAreaFilled(false);
 			forward.setCursor(new Cursor(Cursor.HAND_CURSOR));
 			forward.addActionListener(event -> {
-				AggregatedValidationResult validationResult = validatePage(split.getPage());
+				AggregatedValidationResult validationResult = pages.get(split.getPage()).getValidationResult();
 				if (validationResult.validateIsErrorFree()) {
 					pagers.get(split.getPage()).setIcon(null);
 				} else {
@@ -223,12 +225,20 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			JPanel pager = new JPanel();
 			pager.setOpaque(false);
 			pager.setBorder(BorderFactory.createEmptyBorder(0, 0, 5, 0));
+			pager.addMouseWheelListener(e -> {
+				if (e.getWheelRotation() > 0)
+					split.next();
+				else
+					split.back();
+				pagers.get(split.getPage()).setSelected(true);
+			});
+
 			pager.add(back);
 			pager.add(new JLabel(UIRES.get("separator")));
 
 			int idx = 0;
-			for (Map.Entry<String, JComponent> entry : pages.entrySet()) {
-				JToggleButton page = new JToggleButton(entry.getKey());
+			for (ModElementGUIPage pageEntry : pages) {
+				JToggleButton page = new JToggleButton(pageEntry.getID());
 				page.setBorder(null);
 				page.setContentAreaFilled(false);
 				page.setCursor(new Cursor(Cursor.HAND_CURSOR));
@@ -242,6 +252,8 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 
 				int finalIdx = idx;
 				page.addActionListener(e -> split.setPage(finalIdx));
+
+				pageEntry.setShowThisPageAction(page::doClick);
 
 				if (idx == 0)
 					page.setSelected(true);
@@ -260,17 +272,14 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			save.setForeground(Theme.current().getSecondAltBackgroundColor());
 			save.addActionListener(event -> {
 				List<ValidationGroup> errors = new ArrayList<>();
-
-				int i = 0;
-				for (Map.Entry<String, JComponent> ignored : pages.entrySet()) {
-					AggregatedValidationResult validationResult = validatePage(i);
+				for (int i = 0; i < pages.size(); i++) {
+					AggregatedValidationResult validationResult = pages.get(i).getValidationResult();
 					if (!validationResult.validateIsErrorFree()) {
 						pagers.get(i).setIcon(UIRES.get("16px.clear"));
 						errors.add(validationResult);
 					} else {
 						pagers.get(i).setIcon(null);
 					}
-					i++;
 				}
 
 				AggregatedValidationResult validationResult = new AggregatedValidationResult(errors);
@@ -286,17 +295,14 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			saveOnly.setForeground(Theme.current().getForegroundColor());
 			saveOnly.addActionListener(event -> {
 				List<ValidationGroup> errors = new ArrayList<>();
-
-				int i = 0;
-				for (Map.Entry<String, JComponent> ignored : pages.entrySet()) {
-					AggregatedValidationResult validationResult = validatePage(i);
+				for (int i = 0; i < pages.size(); i++) {
+					AggregatedValidationResult validationResult = pages.get(i).getValidationResult();
 					if (!validationResult.validateIsErrorFree()) {
 						pagers.get(i).setIcon(UIRES.get("16px.clear"));
 						errors.add(validationResult);
 					} else {
 						pagers.get(i).setIcon(null);
 					}
-					i++;
 				}
 
 				AggregatedValidationResult validationResult = new AggregatedValidationResult(errors);
@@ -333,6 +339,20 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 				toolBarLeft.add(codeViewer);
 			}
 
+			try {
+				URI helpURI = this.contextURL();
+				if (helpURI != null) {
+					JButton help = L10N.button("common.help");
+					help.setMargin(new Insets(1, 40, 1, 40));
+					toolBarLeft.add(help);
+					help.addActionListener(e -> DesktopUtils.browse(helpURI));
+				}
+			} catch (URISyntaxException e) {
+				LOG.warn("Failed to create help context", e);
+			}
+
+			toolBarLeft.add(search);
+
 			add("North",
 					ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false,
 							true, false));
@@ -344,7 +364,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			saveOnly.setBackground(Theme.current().getAltBackgroundColor());
 			saveOnly.setForeground(Theme.current().getForegroundColor());
 			saveOnly.addActionListener(event -> {
-				AggregatedValidationResult validationResult = validatePage(0);
+				AggregatedValidationResult validationResult = pages.getFirst().getValidationResult();
 				if (validationResult.validateIsErrorFree())
 					finishModCreation(false);
 				else
@@ -356,7 +376,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 			save.setBackground(Theme.current().getInterfaceAccentColor());
 			save.setForeground(Theme.current().getSecondAltBackgroundColor());
 			save.addActionListener(event -> {
-				AggregatedValidationResult validationResult = validatePage(0);
+				AggregatedValidationResult validationResult = pages.getFirst().getValidationResult();
 				if (validationResult.validateIsErrorFree())
 					finishModCreation(true);
 				else
@@ -390,11 +410,23 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 				toolBarLeft.add(codeViewer);
 			}
 
+			try {
+				URI helpURI = this.contextURL();
+				if (helpURI != null) {
+					JButton help = L10N.button("common.help");
+					help.setMargin(new Insets(1, 40, 1, 40));
+					toolBarLeft.add(help);
+					help.addActionListener(e -> DesktopUtils.browse(helpURI));
+				}
+			} catch (URISyntaxException e) {
+				LOG.warn("Failed to create help context", e);
+			}
+
 			add("North",
 					ComponentUtils.applyPadding(PanelUtils.westAndEastElement(toolBarLeft, toolBar), 5, true, false,
 							true, false));
 
-			centerComponent = new ArrayList<>(pages.values()).get(0);
+			centerComponent = pages.getFirst().getComponent();
 		}
 
 		if (modElementCodeViewer != null) {
@@ -431,6 +463,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 
 		if (exclusions != null && inclusions != null) { // can't exclude and include together
 			LOG.warn("Field exclusions and inclusions can not be used at the same time. Skipping them.");
+			TestUtil.failIfTestingEnvironment();
 		} else if ((exclusions != null && !exclusions.isEmpty()) || (inclusions != null && !inclusions.isEmpty())) {
 			Map<Container, List<Component>> includedComponents = new HashMap<>();
 			for (String entry : Objects.requireNonNullElse(exclusions, inclusions)) {
@@ -464,7 +497,8 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 					else // exclude the component itself
 						UnsupportedComponent.markUnsupported(c);
 				} catch (IllegalAccessException | NoSuchFieldException | NullPointerException e) {
-					LOG.warn("Failed to access component: " + entry, e);
+					LOG.warn("Failed to access component: {}", entry, e);
+					TestUtil.failIfTestingEnvironment();
 				}
 			}
 
@@ -481,6 +515,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 								UnsupportedComponent.markUnsupported(obj);
 						} catch (IllegalAccessException e) {
 							LOG.warn("Failed to access component", e);
+							TestUtil.failIfTestingEnvironment();
 						}
 					}
 				});
@@ -517,8 +552,9 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		GE element = getElementFromGUI();
 
 		// if new element, specify the folder of the mod element
-		if (!editingMode)
-			modElement.setParentFolder(Objects.requireNonNullElse(targetFolder, mcreator.mv.currentFolder));
+		if (!editingMode && mcreator instanceof ModMaker modMaker)
+			modElement.setParentFolder(
+					Objects.requireNonNullElse(targetFolder, modMaker.getWorkspacePanel().currentFolder));
 
 		// add mod element to the list, it will be only added for the first time, otherwise refreshed
 		// add it before generating so all references are loaded
@@ -547,6 +583,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 
 		// save custom mod element (preview) picture if it has one
 		mcreator.getModElementManager().storeModElementPicture(element);
+		modElement.reloadElementIcon(); // force another reload here in case the image changed
 
 		// re-init mod element to pick up the new mod element picture and reload mcitems cache
 		modElement.reinit(mcreator.getWorkspace());
@@ -556,7 +593,7 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		// build if selected and needed
 		if ((Launcher.version.isDevelopment() || PreferencesManager.PREFERENCES.gradle.buildOnSave.get())
 				&& mcreator.getModElementManager().requiresElementGradleBuild(element)) {
-			mcreator.actionRegistry.buildWorkspace.doAction();
+			mcreator.getActionRegistry().buildWorkspace.doAction();
 		}
 
 		mcreator.getApplication().getAnalytics().trackEvent(
@@ -574,9 +611,9 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 
 		// handle tab changes
 		if (this.tabIn != null && closeTab)
-			mcreator.mcreatorTabs.closeTab(tabIn);
+			mcreator.getTabs().closeTab(tabIn);
 		else
-			mcreator.mcreatorTabs.getTabs().stream().filter(e -> e.getContent() == this)
+			mcreator.getTabs().getTabs().stream().filter(e -> e.getContent() == this)
 					.forEach(e -> e.setIcon(((ModElementGUI<?>) e.getContent()).getViewIcon()));
 	}
 
@@ -585,8 +622,6 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 	}
 
 	protected abstract void initGUI();
-
-	protected abstract AggregatedValidationResult validatePage(int page);
 
 	protected void afterGeneratableElementStored() {
 	}
@@ -598,7 +633,17 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		return true;
 	}
 
+	public void onViewClosed() {
+		if (this instanceof IBlocklyPanelHolder holder) {
+			holder.closeBlocklyPanels();
+		}
+	}
+
 	public void reloadDataLists() {
+	}
+
+	@Override public JTextComponent getSearchTextField() {
+		return search;
 	}
 
 	/**
@@ -612,10 +657,14 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 		return editingMode;
 	}
 
+	final List<ModElementGUIPage> getPages() {
+		return pages;
+	}
+
 	public final AggregatedValidationResult validateAllPages() {
 		List<ValidationGroup> errors = new ArrayList<>();
-		for (int i = 0; i < pages.size(); i++) {
-			AggregatedValidationResult validationResult = validatePage(i);
+		for (ModElementGUIPage page : pages) {
+			AggregatedValidationResult validationResult = page.getValidationResult();
 			if (!validationResult.validateIsErrorFree())
 				errors.add(validationResult);
 		}
@@ -632,10 +681,12 @@ public abstract class ModElementGUI<GE extends GeneratableElement> extends ViewB
 
 	@Override @Nullable public IHelpContext withEntry(String entry) {
 		try {
-			return new ModElementHelpContext(this.contextName(), this.contextURL(), entry, this::getElementFromGUI);
+			return new ModElementHelpContext<>(this.contextName(), this.contextURL(), entry, this);
 		} catch (URISyntaxException e) {
-			return new ModElementHelpContext(this.contextName(), null, entry, this::getElementFromGUI);
+			throw new RuntimeException(e);
 		}
 	}
+
+	@Override @Nullable public abstract URI contextURL() throws URISyntaxException;
 
 }
