@@ -19,7 +19,10 @@
 package net.mcreator.ui.workspace;
 
 import com.formdev.flatlaf.FlatClientProperties;
-import net.mcreator.element.*;
+import net.mcreator.element.BaseType;
+import net.mcreator.element.GeneratableElement;
+import net.mcreator.element.ModElementType;
+import net.mcreator.element.NamespacedGeneratableElement;
 import net.mcreator.element.types.CustomElement;
 import net.mcreator.generator.GeneratorTemplate;
 import net.mcreator.generator.GeneratorTemplatesList;
@@ -27,11 +30,11 @@ import net.mcreator.generator.ListTemplate;
 import net.mcreator.io.FileIO;
 import net.mcreator.java.JavaConventions;
 import net.mcreator.minecraft.RegistryNameFixer;
-import net.mcreator.preferences.PreferencesManager;
-import net.mcreator.preferences.data.HiddenSection;
-import net.mcreator.ui.MCreator;
 import net.mcreator.ui.action.UnregisteredAction;
-import net.mcreator.ui.component.*;
+import net.mcreator.ui.component.JEmptyBox;
+import net.mcreator.ui.component.JScrollablePopupMenu;
+import net.mcreator.ui.component.JSelectableList;
+import net.mcreator.ui.component.TransparentToolBar;
 import net.mcreator.ui.component.util.ComponentUtils;
 import net.mcreator.ui.component.util.EventButtonGroup;
 import net.mcreator.ui.component.util.ListUtil;
@@ -48,64 +51,54 @@ import net.mcreator.ui.modgui.ModElementGUI;
 import net.mcreator.ui.modgui.ModTypeDropdown;
 import net.mcreator.ui.validation.Validator;
 import net.mcreator.ui.validation.component.VTextField;
-import net.mcreator.ui.validation.optionpane.OptionPaneValidatior;
+import net.mcreator.ui.validation.optionpane.OptionPaneValidator;
 import net.mcreator.ui.validation.optionpane.VOptionPane;
 import net.mcreator.ui.validation.validators.ModElementNameValidator;
+import net.mcreator.ui.variants.modmaker.ModMaker;
 import net.mcreator.ui.workspace.breadcrumb.WorkspaceFolderBreadcrumb;
+import net.mcreator.ui.workspace.resources.TextureType;
 import net.mcreator.ui.workspace.resources.WorkspacePanelResources;
 import net.mcreator.util.ColorUtils;
 import net.mcreator.util.image.EmptyIcon;
 import net.mcreator.util.image.IconUtils;
+import net.mcreator.util.image.ImageUtils;
 import net.mcreator.workspace.elements.FolderElement;
 import net.mcreator.workspace.elements.IElement;
 import net.mcreator.workspace.elements.ModElement;
 import net.mcreator.workspace.references.ReferencesFinder;
+import net.mcreator.workspace.resources.CustomTexture;
+import net.mcreator.workspace.resources.Texture;
+import net.mcreator.workspace.settings.user.WorkspaceUserSettings;
 
 import javax.swing.*;
 import javax.swing.event.ChangeEvent;
-import javax.swing.event.DocumentEvent;
-import javax.swing.event.DocumentListener;
 import java.awt.*;
 import java.awt.event.*;
 import java.io.File;
-import java.util.List;
 import java.util.*;
+import java.util.List;
 import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
 
-@SuppressWarnings("EqualsBetweenInconvertibleTypes") public class WorkspacePanel extends JPanel {
+@SuppressWarnings("EqualsBetweenInconvertibleTypes") public class WorkspacePanel extends AbstractMainWorkspacePanel {
 
 	private final FilterModel dml = new FilterModel();
-	public final JTextField search;
+
+	private final JPopupMenu contextMenu;
 
 	public FolderElement currentFolder;
 
 	public final JSelectableList<IElement> list;
 
-	private final CardLayout cardLayout = new CardLayout() {
-		@Override public void show(Container container, String s) {
-			super.show(container, s);
-			currentTab = s;
-			search.repaint();
-		}
-	};
-	private final JPanel panels = new JPanel(cardLayout);
-
-	private final JPanel rotatablePanel = new JPanel();
-	private final Map<String, AbstractWorkspacePanel> sectionTabs = new HashMap<>();
-	private final List<JButton> verticalTabs = new ArrayList<>();
 	public final WorkspacePanelResources resourcesPan;
-
-	private String currentTab = "mods";
-
-	private final MCreator mcreator;
 
 	private final JButton upFolder;
 	private final JButton renameFolder;
 
+	private final JLabel but1 = new JLabel(UIRES.get("wrk_add"));
 	private final JLabel but2 = new JLabel(UIRES.get("wrk_edit"));
 	private final JLabel but2a = new JLabel(UIRES.get("wrk_duplicate"));
 	private final JLabel but3 = new JLabel(UIRES.get("wrk_delete"));
@@ -137,10 +130,10 @@ import java.util.stream.Collectors;
 
 	private final JRadioButtonMenuItem sortDateCreated = new JRadioButtonMenuItem(
 			L10N.t("workspace.elements.list.sort_date"));
-	public JRadioButtonMenuItem sortName = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.sort_name"));
+	public final JRadioButtonMenuItem sortName = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.sort_name"));
 	private final JRadioButtonMenuItem sortType = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.sort_type"));
 
-	private final OptionPaneValidatior folderNameValidator = new OptionPaneValidatior() {
+	private final OptionPaneValidator folderNameValidator = new OptionPaneValidator() {
 		@Override public ValidationResult validate(JComponent component) {
 			String folderName = ((JTextField) component).getText();
 
@@ -164,9 +157,8 @@ import java.util.stream.Collectors;
 		}
 	};
 
-	public WorkspacePanel(final MCreator mcreator) {
-		super(new BorderLayout(5, 5));
-		this.mcreator = mcreator;
+	public WorkspacePanel(final ModMaker mcreator) {
+		super(mcreator, new BorderLayout(3, 3));
 
 		this.currentFolder = mcreator.getWorkspace().getFoldersRoot();
 
@@ -180,9 +172,7 @@ import java.util.stream.Collectors;
 				switchFolder(fe);
 		});
 
-		JPopupMenu contextMenu = new JPopupMenu();
-
-		panels.setOpaque(false);
+		contextMenu = new JPopupMenu();
 
 		list = new JSelectableList<>(dml);
 		list.setOpaque(false);
@@ -203,7 +193,7 @@ import java.util.stream.Collectors;
 					}
 				}
 				mcreator.getWorkspace().markDirty();
-				sectionTabs.get("mods").reloadElements();
+				getVerticalTab(WorkspacePanelMods.class).reloadElements();
 			} else {
 				Toolkit.getDefaultToolkit().beep();
 			}
@@ -269,16 +259,33 @@ import java.util.stream.Collectors;
 
 		list.addKeyListener(new KeyAdapter() {
 			@Override public void keyPressed(KeyEvent e) {
-				if (e.getKeyCode() == KeyEvent.VK_F && e.isControlDown() && e.isShiftDown()) {
-					searchModElementsUsages();
+				if (e.getKeyCode() == KeyEvent.VK_F && e.isControlDown()) {
+					if (e.isShiftDown()) {
+						searchModElementsUsages();
+					} else {
+						search.requestFocusInWindow();
+					}
+				} else if (e.getKeyCode() == KeyEvent.VK_N && e.isControlDown() && but1.isEnabled()) {
+					new ModTypeDropdown(mcreator).show(but1, but1.getWidth() + 5, -3);
+				} else if (e.getKeyCode() == KeyEvent.VK_L && e.isControlDown()) {
+					lockCode();
+				} else if (e.getKeyCode() == KeyEvent.VK_D && e.isControlDown()) {
+					duplicateCurrentlySelectedModElement();
 				} else if (e.getKeyCode() == KeyEvent.VK_DELETE) {
 					deleteCurrentlySelectedModElement();
 				} else if (e.getKeyCode() == KeyEvent.VK_ENTER) {
 					IElement selected = list.getSelectedValue();
+					var selectedLocation = list.indexToLocation(list.getSelectedIndex());
 					if (selected instanceof FolderElement) {
 						switchFolder((FolderElement) selected);
 					} else {
-						editCurrentlySelectedModElement((ModElement) selected, list, 0, 0);
+						if (e.isAltDown()) {
+							editCurrentlySelectedModElementAsCode((ModElement) selected, list, selectedLocation.x,
+									selectedLocation.y);
+						} else {
+							editCurrentlySelectedModElement((ModElement) selected, list, selectedLocation.x,
+									selectedLocation.y);
+						}
 					}
 				}
 			}
@@ -288,55 +295,24 @@ import java.util.stream.Collectors;
 		sp.setOpaque(false);
 		sp.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
 		sp.getViewport().setOpaque(false);
-		sp.setBorder(null);
+		sp.setBorder(BorderFactory.createEmptyBorder());
 
 		JPanel modElementsPanel = new JPanel(new BorderLayout(0, 0));
-		modElementsPanel.setOpaque(false);
-
-		JPanel slo = new JPanel(new BorderLayout(0, 3));
+		if (mcreator.hasBackgroundImage()) {
+			modElementsPanel.setOpaque(false);
+		} else {
+			modElementsPanel.setBackground(Theme.current().getSecondAltBackgroundColor());
+		}
 
 		JPanel se = new JPanel(new BorderLayout());
 
-		search = new JTextField(34) {
-			@Override public void paintComponent(Graphics g) {
-				super.paintComponent(g);
-				Graphics2D g2 = (Graphics2D) g;
-				g2.setRenderingHint(RenderingHints.KEY_ANTIALIASING, RenderingHints.VALUE_ANTIALIAS_ON);
-				if (getText().isEmpty()) {
-					g.setFont(g.getFont().deriveFont(11f));
-					g.setColor(new Color(120, 120, 120));
-					if (!currentTab.equals("mods")) {
-						g.drawString(L10N.t("workspace.elements.list.search_list"), 8, 19);
-					} else {
-						g.drawString(L10N.t("workspace.elements.list.search_folder"), 8, 19);
-					}
+		search.addKeyListener(new KeyAdapter() {
+			@Override public void keyPressed(KeyEvent e) {
+				if (e.getKeyCode() == KeyEvent.VK_DOWN && list.getModel().getSize() > 0) {
+					list.clearSelection();
+					list.setSelectedIndex(0);
+					list.requestFocusInWindow();
 				}
-			}
-		};
-		search.addFocusListener(new FocusAdapter() {
-			@Override public void focusGained(FocusEvent e) {
-				super.focusGained(e);
-				search.setText("");
-			}
-		});
-
-		search.setToolTipText(L10N.t("workspace.elements.list.search.tooltip"));
-
-		ComponentUtils.deriveFont(search, 14);
-		search.setOpaque(false);
-
-		search.getDocument().addDocumentListener(new DocumentListener() {
-
-			@Override public void removeUpdate(DocumentEvent arg0) {
-				sectionTabs.values().forEach(IReloadableFilterable::refilterElements);
-			}
-
-			@Override public void insertUpdate(DocumentEvent arg0) {
-				sectionTabs.values().forEach(IReloadableFilterable::refilterElements);
-			}
-
-			@Override public void changedUpdate(DocumentEvent arg0) {
-				sectionTabs.values().forEach(IReloadableFilterable::refilterElements);
 			}
 		});
 
@@ -402,12 +378,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem tilesIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.tiles"));
 		tilesIcons.addActionListener(e -> {
 			if (tilesIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.TILES);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.TILES;
 				updateElementListRenderer();
 			}
 		});
-		tilesIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.TILES);
+		tilesIcons.setSelected(
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.TILES);
 		Arrays.stream(tilesIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(tilesIcons)));
 		ComponentUtils.deriveFont(tilesIcons, 12);
 		tilesIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
@@ -415,12 +391,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem largeIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.large"));
 		largeIcons.addActionListener(e -> {
 			if (largeIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.LARGE);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.LARGE;
 				updateElementListRenderer();
 			}
 		});
-		largeIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.LARGE);
+		largeIcons.setSelected(
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.LARGE);
 		Arrays.stream(largeIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(largeIcons)));
 		ComponentUtils.deriveFont(largeIcons, 12);
 		largeIcons.setBorder(BorderFactory.createEmptyBorder(5, 5, 5, 5));
@@ -428,12 +404,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem mediumIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.medium"));
 		mediumIcons.addActionListener(e -> {
 			if (mediumIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.MEDIUM);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.MEDIUM;
 				updateElementListRenderer();
 			}
 		});
-		mediumIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.MEDIUM);
+		mediumIcons.setSelected(
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.MEDIUM);
 		Arrays.stream(mediumIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(mediumIcons)));
 		ComponentUtils.deriveFont(mediumIcons, 12);
 		mediumIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
@@ -441,12 +417,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem smallIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.small"));
 		smallIcons.addActionListener(e -> {
 			if (smallIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.SMALL);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.SMALL;
 				updateElementListRenderer();
 			}
 		});
-		smallIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.SMALL);
+		smallIcons.setSelected(
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.SMALL);
 		Arrays.stream(smallIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(smallIcons)));
 		ComponentUtils.deriveFont(smallIcons, 12);
 		smallIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
@@ -454,12 +430,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem listIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.list"));
 		listIcons.addActionListener(e -> {
 			if (listIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.LIST);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.LIST;
 				updateElementListRenderer();
 			}
 		});
 		listIcons.setSelected(
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get() == HiddenSection.IconSize.LIST);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.LIST);
 		Arrays.stream(listIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(listIcons)));
 		ComponentUtils.deriveFont(listIcons, 12);
 		listIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
@@ -467,12 +443,12 @@ import java.util.stream.Collectors;
 		JRadioButtonMenuItem detailsIcons = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.details"));
 		detailsIcons.addActionListener(e -> {
 			if (detailsIcons.isSelected()) {
-				PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.set(HiddenSection.IconSize.DETAILS);
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize = WorkspaceUserSettings.IconSize.DETAILS;
 				updateElementListRenderer();
 			}
 		});
-		detailsIcons.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.DETAILS);
+		detailsIcons.setSelected(
+				mcreator.getWorkspaceUserSettings().workspacePanelIconSize == WorkspaceUserSettings.IconSize.DETAILS);
 		Arrays.stream(detailsIcons.getChangeListeners()).forEach(e -> e.stateChanged(new ChangeEvent(detailsIcons)));
 		ComponentUtils.deriveFont(detailsIcons, 12);
 		detailsIcons.setBorder(BorderFactory.createEmptyBorder(3, 5, 3, 5));
@@ -533,9 +509,7 @@ import java.util.stream.Collectors;
 		JPanel filterSort = new JPanel(new GridLayout(1, 2, 0, 0));
 		filterSort.setOpaque(false);
 
-		search.setBackground(ColorUtils.applyAlpha(search.getBackground(), 150));
 		search.putClientProperty(FlatClientProperties.TEXT_FIELD_TRAILING_COMPONENT, filterSort);
-		search.putClientProperty(FlatClientProperties.TEXT_FIELD_SHOW_CLEAR_BUTTON, true);
 
 		JButton filter = L10N.button("workspace.elements.list.filter");
 		JButton sort = L10N.button("workspace.elements.list.sort");
@@ -565,7 +539,7 @@ import java.util.stream.Collectors;
 		filterPopup.add(new UnregisteredAction(L10N.t("workspace.elements.list.filter_witherrors"),
 				e -> toggleFilter("f:err")));
 		filterPopup.addSeparator();
-		for (ModElementType<?> type : ModElementTypeLoader.REGISTRY) {
+		for (ModElementType<?> type : mcreator.getGeneratorStats().getSupportedModElementTypes()) {
 			filterPopup.add(new UnregisteredAction(type.getReadableName(), e -> toggleFilter(
 					"f:" + type.getReadableName().replace(" ", "").toLowerCase(Locale.ENGLISH))).setIcon(
 					IconUtils.resize(type.getIcon(), 16, 16)));
@@ -577,8 +551,8 @@ import java.util.stream.Collectors;
 		EventButtonGroup sortOne = new EventButtonGroup();
 		sortOne.addActionListener(e -> resort());
 		JRadioButtonMenuItem asc = new JRadioButtonMenuItem(L10N.t("workspace.elements.list.ascending"));
-		asc.setSelected(PreferencesManager.PREFERENCES.hidden.workspaceSortAscending.get());
-		desc.setSelected(!PreferencesManager.PREFERENCES.hidden.workspaceSortAscending.get());
+		asc.setSelected(mcreator.getWorkspaceUserSettings().workspacePanelSortAscending);
+		desc.setSelected(!mcreator.getWorkspaceUserSettings().workspacePanelSortAscending);
 		sortOne.add(asc);
 		sortOne.add(desc);
 		sortPopup.add(asc);
@@ -616,18 +590,17 @@ import java.util.stream.Collectors;
 
 		view.addActionListener(e -> viewPopup.show(view, 0, 23));
 
-		if (PreferencesManager.PREFERENCES.hidden.workspaceSortOrder.get() == HiddenSection.SortType.NAME) {
+		if (mcreator.getWorkspaceUserSettings().workspacePanelSortType == WorkspaceUserSettings.SortType.NAME) {
 			sortName.setSelected(true);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceSortOrder.get() == HiddenSection.SortType.TYPE) {
+		} else if (mcreator.getWorkspaceUserSettings().workspacePanelSortType == WorkspaceUserSettings.SortType.TYPE) {
 			sortType.setSelected(true);
 		} else {
 			sortDateCreated.setSelected(true);
 		}
 
-		slo.setOpaque(false);
 		se.setOpaque(false);
 
-		slo.add("North", se);
+		add("North", se);
 
 		mainp.setOpaque(false);
 
@@ -639,22 +612,9 @@ import java.util.stream.Collectors;
 		modElementsPanel.add("North", PanelUtils.northAndCenterElement(elementsBreadcrumb, detailsbar, 0, 0));
 		modElementsPanel.add("Center", mainp);
 
-		slo.add("Center", panels);
-
-		slo.setBorder(null);
-
-		rotatablePanel.setLayout(new BoxLayout(rotatablePanel, BoxLayout.PAGE_AXIS));
-		rotatablePanel.setBackground(Theme.current().getBackgroundColor());
-		slo.add("West", rotatablePanel);
-
-		add("Center", slo);
-
-		setOpaque(false);
-
 		JPanel pne = new JPanel(new GridLayout(8, 1, 6, 6));
 		pne.setOpaque(false);
 
-		JLabel but1 = new JLabel(UIRES.get("wrk_add"));
 		but1.addMouseListener(new MouseAdapter() {
 			@Override public void mouseClicked(MouseEvent e) {
 				if (but1.isEnabled())
@@ -718,14 +678,20 @@ import java.util.stream.Collectors;
 		but5a.setCursor(new Cursor(Cursor.HAND_CURSOR));
 		pne.add(but5a);
 
-		JPanel toolp = new JPanel(new BorderLayout(0, 0)) {
-			@Override public void paintComponent(Graphics g) {
-				g.setColor(ColorUtils.applyAlpha(Theme.current().getAltBackgroundColor(), 100));
-				g.fillRect(0, 0, getWidth(), getHeight());
-				super.paintComponent(g);
-			}
-		};
-		toolp.setOpaque(false);
+		JPanel toolp;
+		if (mcreator.hasBackgroundImage()) {
+			toolp = new JPanel(new BorderLayout(0, 0)) {
+				@Override public void paintComponent(Graphics g) {
+					g.setColor(ColorUtils.applyAlpha(Theme.current().getAltBackgroundColor(), 100));
+					g.fillRect(0, 0, getWidth(), getHeight());
+					super.paintComponent(g);
+				}
+			};
+			toolp.setOpaque(false);
+		} else {
+			toolp = new JPanel(new BorderLayout(0, 0));
+		}
+
 		toolp.setBorder(BorderFactory.createEmptyBorder(3, 5, 0, 5));
 		toolp.add("North", pne);
 
@@ -746,19 +712,19 @@ import java.util.stream.Collectors;
 		mainp.add("ep", PanelUtils.totalCenterInPanel(emptbtpd));
 		mainp.add("sp", sp);
 
-		addVerticalTab("mods", L10N.t("workspace.category.mod_elements"),
+		addVerticalTab(L10N.t("workspace.category.mod_elements"),
 				new WorkspacePanelMods(PanelUtils.westAndCenterElement(toolp, modElementsPanel)));
-		addVerticalTab("resources", L10N.t("workspace.category.resources"), resourcesPan);
-		addVerticalTab("tags", L10N.t("workspace.category.tags"), new WorkspacePanelTags(this));
-		addVerticalTab("variables", L10N.t("workspace.category.variables"), new WorkspacePanelVariables(this));
-		addVerticalTab("localization", L10N.t("workspace.category.localization"),
-				new WorkspacePanelLocalizations(this));
+		addVerticalTab(L10N.t("workspace.category.resources"), resourcesPan);
+		addVerticalTab(L10N.t("workspace.category.tags"), new WorkspacePanelTags(this));
+		addVerticalTab(L10N.t("workspace.category.variables"), new WorkspacePanelVariables(this));
+		addVerticalTab(L10N.t("workspace.category.localization"), new WorkspacePanelLocalizations(this));
 
-		switchToVerticalTab("mods");
+		switchToVerticalTab(WorkspacePanel.WorkspacePanelMods.class);
 
 		elementsBreadcrumb.reloadPath(currentFolder, ModElement.class);
 
 		JMenuItem openElement = new JMenuItem(L10N.t("workspace.elements.list.edit.open"));
+		openElement.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, 0));
 		openElement.setFont(openElement.getFont().deriveFont(Font.BOLD));
 		openElement.addActionListener(e -> {
 			IElement selected = list.getSelectedValue();
@@ -768,14 +734,19 @@ import java.util.stream.Collectors;
 				editCurrentlySelectedModElement((ModElement) selected, list, 0, 0);
 		});
 
+		deleteElement.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_DELETE, 0));
 		deleteElement.setIcon(UIRES.get("16px.clear"));
 		deleteElement.addActionListener(e -> deleteCurrentlySelectedModElement());
 
+		duplicateElement.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_D, KeyEvent.CTRL_DOWN_MASK));
 		duplicateElement.addActionListener(e -> duplicateCurrentlySelectedModElement());
 
+		searchElement.setAccelerator(
+				KeyStroke.getKeyStroke(KeyEvent.VK_F, KeyEvent.CTRL_DOWN_MASK | KeyEvent.SHIFT_DOWN_MASK));
 		searchElement.setIcon(UIRES.get("16px.search"));
 		searchElement.addActionListener(e -> searchModElementsUsages());
 
+		codeElement.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_ENTER, KeyEvent.ALT_DOWN_MASK));
 		codeElement.addMouseListener(new MouseAdapter() {
 			@Override public void mouseClicked(MouseEvent e) {
 				super.mouseClicked(e);
@@ -790,6 +761,7 @@ import java.util.stream.Collectors;
 			}
 		});
 
+		lockElement.setAccelerator(KeyStroke.getKeyStroke(KeyEvent.VK_L, KeyEvent.CTRL_DOWN_MASK));
 		lockElement.addActionListener(e -> lockCode());
 
 		idElement.addActionListener(e -> editIDOfCurrentlySelectedModElement());
@@ -821,59 +793,19 @@ import java.util.stream.Collectors;
 		updateElementListRenderer();
 	}
 
-	/**
-	 * Adds a new section to this workspace as well as a vertical tab button on the left that switches
-	 * to the section panel when clicked.
-	 *
-	 * @param id      The unique identifier of the section used for reloading/filtering contained elements.
-	 * @param name    The name of the section shown in the workspace.
-	 * @param section The panel representing contents of the vertical tab being added.
-	 */
-	public void addVerticalTab(String id, String name, AbstractWorkspacePanel section) {
-		if (getVerticalTab(id) != null)
-			return;
-
-		panels.add(section, id);
-		sectionTabs.put(id, section);
-
-		if (section.isSupportedInWorkspace()) {
-			VerticalTabButton tab = new VerticalTabButton(name);
-			tab.setName(id);
-			tab.setContentAreaFilled(false);
-			tab.setMargin(new Insets(7, 1, 7, 2));
-			tab.setBorderPainted(false);
-			tab.setFocusPainted(false);
-			tab.setOpaque(true);
-			tab.setBackground(Theme.current().getBackgroundColor());
-			tab.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
-			tab.addActionListener(e -> switchToVerticalTab(id));
-			verticalTabs.add(tab);
-			rotatablePanel.add(tab);
-		}
-	}
-
-	public AbstractWorkspacePanel getVerticalTab(String id) {
-		return sectionTabs.get(id);
-	}
-
-	public void switchToVerticalTab(String id) {
-		if (sectionTabs.get(id).canSwitchToSection()) {
-			for (JButton btt : verticalTabs) {
-				btt.setBackground(btt.getName().equals(id) ?
-						Theme.current().getAltBackgroundColor() :
-						Theme.current().getBackgroundColor());
-			}
-			cardLayout.show(panels, id);
-			reloadElementsInCurrentTab();
-			modElementsBar.setVisible(id.equals("mods"));
-		}
+	@Override protected String getSearchPlaceholderText() {
+		return currentTabPanel instanceof WorkspacePanelMods ?
+				L10N.t("workspace.elements.list.search_folder") :
+				L10N.t("workspace.elements.list.search_list");
 	}
 
 	public void switchFolder(FolderElement switchTo) {
 		search.setText(null); // clear the search bar
 		currentFolder = switchTo;
 
-		sectionTabs.get("mods").reloadElements();
+		list.cancelDND();
+
+		getVerticalTab(WorkspacePanelMods.class).reloadElements();
 
 		// reload breadcrumb
 		elementsBreadcrumb.reloadPath(currentFolder, ModElement.class);
@@ -892,20 +824,28 @@ import java.util.stream.Collectors;
 
 	private void resort() {
 		if (sortName.isSelected()) {
-			PreferencesManager.PREFERENCES.hidden.workspaceSortOrder.set(HiddenSection.SortType.NAME);
+			mcreator.getWorkspaceUserSettings().workspacePanelSortType = WorkspaceUserSettings.SortType.NAME;
 		} else if (sortType.isSelected()) {
-			PreferencesManager.PREFERENCES.hidden.workspaceSortOrder.set(HiddenSection.SortType.TYPE);
+			mcreator.getWorkspaceUserSettings().workspacePanelSortType = WorkspaceUserSettings.SortType.TYPE;
 		} else {
-			PreferencesManager.PREFERENCES.hidden.workspaceSortOrder.set(HiddenSection.SortType.CREATED);
+			mcreator.getWorkspaceUserSettings().workspacePanelSortType = WorkspaceUserSettings.SortType.CREATED;
 		}
 
-		PreferencesManager.PREFERENCES.hidden.workspaceSortAscending.set(!desc.isSelected());
+		mcreator.getWorkspaceUserSettings().workspacePanelSortAscending = !desc.isSelected();
 
-		sectionTabs.values().forEach(IReloadableFilterable::refilterElements);
+		refilterWorkspaceTab();
+	}
+
+	@Override protected void afterVerticalTabChanged() {
+		search.repaint();
+		modElementsBar.setVisible(currentTabPanel instanceof WorkspacePanelMods);
+		subTabs.putClientProperty(FlatClientProperties.TABBED_PANE_SHOW_CONTENT_SEPARATOR,
+				!(currentTabPanel instanceof WorkspacePanelMods));
 	}
 
 	private void updateElementListRenderer() {
-		if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get() == HiddenSection.IconSize.TILES) {
+		switch (mcreator.getWorkspaceUserSettings().workspacePanelIconSize) {
+		case TILES -> {
 			list.setCellRenderer(new TilesModListRender());
 			list.setFixedCellHeight(72);
 			list.setFixedCellWidth(287);
@@ -913,8 +853,8 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.tiles"));
 			view.setText(L10N.t("workspace.elements.list.tiles"));
 			detailsbar.setVisible(false);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.LARGE) {
+		}
+		case LARGE -> {
 			list.setCellRenderer(new LargeIconModListRender());
 			list.setFixedCellHeight(97);
 			list.setFixedCellWidth(90);
@@ -922,8 +862,8 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.large"));
 			view.setText(L10N.t("workspace.elements.list.large"));
 			detailsbar.setVisible(false);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.MEDIUM) {
+		}
+		case MEDIUM -> {
 			list.setCellRenderer(new MediumIconModListRender());
 			list.setFixedCellHeight(52);
 			list.setFixedCellWidth(287);
@@ -931,8 +871,8 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.medium"));
 			view.setText(L10N.t("workspace.elements.list.medium"));
 			detailsbar.setVisible(false);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.SMALL) {
+		}
+		case SMALL -> {
 			list.setCellRenderer(new SmallIconModListRender(true));
 			list.setFixedCellHeight(32);
 			list.setFixedCellWidth(200);
@@ -940,8 +880,8 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.small"));
 			view.setText(L10N.t("workspace.elements.list.small"));
 			detailsbar.setVisible(false);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.LIST) {
+		}
+		case LIST -> {
 			list.setCellRenderer(new ListIconModListRender());
 			list.setFixedCellHeight(28);
 			list.setFixedCellWidth(-1);
@@ -949,8 +889,8 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.list"));
 			view.setText(L10N.t("workspace.elements.list.list"));
 			detailsbar.setVisible(false);
-		} else if (PreferencesManager.PREFERENCES.hidden.workspaceModElementIconSize.get()
-				== HiddenSection.IconSize.DETAILS) {
+		}
+		case DETAILS -> {
 			list.setCellRenderer(new DetailsIconModListRender());
 			list.setFixedCellHeight(24);
 			list.setFixedCellWidth(-1);
@@ -958,6 +898,7 @@ import java.util.stream.Collectors;
 			view.setIcon(UIRES.get("16px.details"));
 			view.setText(L10N.t("workspace.elements.list.details"));
 			detailsbar.setVisible(true);
+		}
 		}
 	}
 
@@ -977,7 +918,7 @@ import java.util.stream.Collectors;
 		IElement mu = list.getSelectedValue();
 		if (mu instanceof ModElement modElement && !NamespacedGeneratableElement.class.isAssignableFrom(
 				modElement.getType().getModElementStorageClass())) {
-			ModElement modified = ModElementIDsDialog.openModElementIDDialog(mcreator, ((ModElement) mu));
+			ModElement modified = ModElementIDsDialog.openModElementIDDialog(mcreator, modElement);
 			if (modified != null)
 				mcreator.getWorkspace().markDirty();
 		} else {
@@ -988,71 +929,79 @@ import java.util.stream.Collectors;
 	}
 
 	private void lockCode() {
-		Object[] options = { L10N.t("workspace.elements.lock_modelement_lock_unlock"),
-				UIManager.getString("OptionPane.cancelButtonText") };
-		int n = JOptionPane.showOptionDialog(mcreator, L10N.t("workspace.elements.lock_modelement_message"),
-				L10N.t("workspace.elements.lock_modelement_confirm"), JOptionPane.YES_NO_CANCEL_OPTION,
-				JOptionPane.WARNING_MESSAGE, null, options, options[1]);
-		if (n == 0) {
-			ProgressDialog dial = new ProgressDialog(mcreator, L10N.t("workspace.elements.lock_modelement_title"));
-			Thread t = new Thread(() -> {
-				ProgressDialog.ProgressUnit p0 = new ProgressDialog.ProgressUnit(
-						L10N.t("workspace.elements.lock_modelement_locking_unlocking"));
-				dial.addProgressUnit(p0);
+		List<IElement> selectedElements = list.getSelectedValuesList();
 
-				List<ModElement> elementsThatGotUnlocked = new ArrayList<>();
-				list.getSelectedValuesList().forEach(el -> {
-					if (el instanceof ModElement mu) {
-						if (mu.isCodeLocked()) {
-							mu.setCodeLock(false);
-							elementsThatGotUnlocked.add(mu); // code got unlocked, add to the list
-						} else {
-							mu.setCodeLock(true);
+		// Only show the dialog if current selection contains lockable elements
+		if (selectedElements.stream()
+				.anyMatch(i -> i instanceof ModElement me && !(me.getType() == ModElementType.CODE))) {
+			Object[] options = { L10N.t("workspace.elements.lock_modelement_lock_unlock"),
+					UIManager.getString("OptionPane.cancelButtonText") };
+			int n = JOptionPane.showOptionDialog(mcreator, L10N.t("workspace.elements.lock_modelement_message"),
+					L10N.t("workspace.elements.lock_modelement_confirm"), JOptionPane.YES_NO_CANCEL_OPTION,
+					JOptionPane.WARNING_MESSAGE, null, options, options[1]);
+			if (n == 0) {
+				ProgressDialog dial = new ProgressDialog(mcreator, L10N.t("workspace.elements.lock_modelement_title"));
+				Thread t = new Thread(() -> {
+					ProgressDialog.ProgressUnit p0 = new ProgressDialog.ProgressUnit(
+							L10N.t("workspace.elements.lock_modelement_locking_unlocking"));
+					dial.addProgressUnit(p0);
+
+					List<ModElement> elementsThatGotUnlocked = new ArrayList<>();
+					selectedElements.forEach(el -> {
+						if (el instanceof ModElement mu) {
+							if (mu.isCodeLocked()) {
+								mu.setCodeLock(false);
+								elementsThatGotUnlocked.add(mu); // code got unlocked, add to the list
+							} else {
+								mu.setCodeLock(true);
+							}
+
+							mcreator.getWorkspace().markDirty();
 						}
+					});
+					reloadWorkspaceTab();
 
-						mcreator.getWorkspace().markDirty();
-					}
-				});
-				reloadElementsInCurrentTab();
+					p0.markStateOk();
 
-				p0.markStateOk();
-
-				// if we have new unlocked elements, we recreate their code
-				if (!elementsThatGotUnlocked.isEmpty()) {
-					ProgressDialog.ProgressUnit p1 = new ProgressDialog.ProgressUnit(
-							L10N.t("workspace.elements.lock_modelement_regeneration"));
-					dial.addProgressUnit(p1);
-					int i = 0;
-					for (ModElement mod : elementsThatGotUnlocked) {
-						GeneratableElement generatableElement = mod.getGeneratableElement();
-						if (generatableElement != null) {
-							// generate mod element
-							mcreator.getGenerator().generateElement(generatableElement);
+					// if we have new unlocked elements, we recreate their code
+					if (!elementsThatGotUnlocked.isEmpty()) {
+						ProgressDialog.ProgressUnit p1 = new ProgressDialog.ProgressUnit(
+								L10N.t("workspace.elements.lock_modelement_regeneration"));
+						dial.addProgressUnit(p1);
+						int i = 0;
+						for (ModElement mod : elementsThatGotUnlocked) {
+							GeneratableElement generatableElement = mod.getGeneratableElement();
+							if (generatableElement != null) {
+								// generate mod element
+								mcreator.getGenerator().generateElement(generatableElement);
+							}
+							i++;
+							p1.setPercent((int) (i / (float) elementsThatGotUnlocked.size() * 100));
 						}
-						i++;
-						p1.setPercent((int) (i / (float) elementsThatGotUnlocked.size() * 100));
-					}
-					p1.markStateOk();
+						p1.markStateOk();
 
-					ProgressDialog.ProgressUnit p2 = new ProgressDialog.ProgressUnit(
-							L10N.t("workspace.elements.lock_modelement_rebuilding_workspace"));
-					dial.addProgressUnit(p2);
-					mcreator.actionRegistry.buildWorkspace.doAction();
-					p2.markStateOk();
-				}
-				dial.hideDialog();
-			}, "CodeLock");
-			t.start();
-			dial.setVisible(true);
+						ProgressDialog.ProgressUnit p2 = new ProgressDialog.ProgressUnit(
+								L10N.t("workspace.elements.lock_modelement_rebuilding_workspace"));
+						dial.addProgressUnit(p2);
+						mcreator.getActionRegistry().buildWorkspace.doAction();
+						p2.markStateOk();
+					}
+					dial.hideDialog();
+				}, "CodeLock");
+				t.start();
+				dial.setVisible(true);
+			}
 		}
 	}
 
 	private void searchModElementsUsages() {
-		if (list.getSelectedValuesList().stream().anyMatch(i -> i instanceof ModElement)) {
+		List<IElement> selectedElements = list.getSelectedValuesList();
+
+		if (selectedElements.stream().anyMatch(i -> i instanceof ModElement)) {
 			mcreator.setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
 
 			Set<ModElement> references = new HashSet<>();
-			for (IElement el : list.getSelectedValuesList()) {
+			for (IElement el : selectedElements) {
 				if (el instanceof ModElement mod) {
 					references.addAll(ReferencesFinder.searchModElementUsages(mcreator.getWorkspace(), mod));
 				}
@@ -1073,13 +1022,13 @@ import java.util.stream.Collectors;
 				String modName = VOptionPane.showInputDialog(mcreator,
 						L10N.t("workspace.elements.duplicate_message", mu.getName()),
 						L10N.t("workspace.elements.duplicate_element", mu.getName()), mu.getElementIcon(),
-						new OptionPaneValidatior() {
+						new OptionPaneValidator() {
 							@Override public Validator.ValidationResult validate(JComponent component) {
 								return new ModElementNameValidator(mcreator.getWorkspace(), (VTextField) component,
 										L10N.t("common.mod_element_name")).validate();
 							}
 						}, L10N.t("workspace.elements.duplicate"), UIManager.getString("OptionPane.cancelButtonText"),
-						null, breadcrumb.getInScrollPane(), null);
+						mu.getName(), breadcrumb.getInScrollPane(), null);
 				if (modName != null && !modName.isEmpty()) {
 					modName = JavaConventions.convertToValidClassName(modName);
 
@@ -1128,7 +1077,7 @@ import java.util.stream.Collectors;
 
 					mcreator.getWorkspace().addModElement(duplicateModElement);
 
-					reloadElementsInCurrentTab();
+					reloadWorkspaceTab();
 				}
 			}
 		}
@@ -1173,22 +1122,24 @@ import java.util.stream.Collectors;
 					modElementFiles.stream().filter(e -> !(e instanceof ListTemplate)).toList(), modElementGlobalFiles,
 					modElementListFiles).show(component, x, y);
 		else if (modElementFiles.size() == 1)
-			ProjectFileOpener.openCodeFile(mcreator, modElementFiles.get(0).getFile());
+			ProjectFileOpener.openCodeFile(mcreator, modElementFiles.getFirst().getFile());
 		else if (modElementGlobalFiles.size() == 1)
-			ProjectFileOpener.openCodeFile(mcreator, modElementGlobalFiles.get(0).getFile());
+			ProjectFileOpener.openCodeFile(mcreator, modElementGlobalFiles.getFirst().getFile());
 	}
 
 	private void deleteCurrentlySelectedModElement() {
+		List<IElement> selectedElements = list.getSelectedValuesList();
+
 		if (but3.isEnabled()) {
-			if (list.getSelectedValue() != null) {
+			if (!selectedElements.isEmpty()) {
 				mcreator.setCursor(Cursor.getPredefinedCursor(Cursor.WAIT_CURSOR));
 
 				Set<ModElement> references = new HashSet<>();
-				for (IElement el : list.getSelectedValuesList()) {
+				for (IElement el : selectedElements) {
 					if (el instanceof ModElement mod)
 						references.addAll(ReferencesFinder.searchModElementUsages(mcreator.getWorkspace(), mod));
 				}
-				list.getSelectedValuesList().stream() // exclude usages by other mod elements being removed
+				selectedElements.stream() // exclude usages by other mod elements being removed
 						.filter(e -> e instanceof ModElement).map(e -> (ModElement) e).forEach(references::remove);
 
 				mcreator.setCursor(Cursor.getDefaultCursor());
@@ -1196,7 +1147,7 @@ import java.util.stream.Collectors;
 				if (SearchUsagesDialog.showDeleteDialog(mcreator, L10N.t("dialog.search_usages.type.mod_element"),
 						references, L10N.t("workspace.elements.confirm_delete_msg_suffix"))) {
 					AtomicBoolean buildNeeded = new AtomicBoolean(false);
-					list.getSelectedValuesList().forEach(re -> {
+					selectedElements.forEach(re -> {
 						if (re instanceof ModElement) {
 							if (!buildNeeded.get()) {
 								GeneratableElement ge = ((ModElement) re).getGeneratableElement();
@@ -1229,10 +1180,34 @@ import java.util.stream.Collectors;
 							folder.getParent().removeChild(folder);
 						}
 					});
-					reloadElementsInCurrentTab();
+					reloadWorkspaceTab();
+
+					if (!references.isEmpty()) {
+						ProgressDialog dial = new ProgressDialog(mcreator,
+								L10N.t("workspace.elements.delete_modelement_title"));
+						Thread t = new Thread(() -> {
+							ProgressDialog.ProgressUnit p1 = new ProgressDialog.ProgressUnit(
+									L10N.t("workspace.elements.delete_modelement_regeneration"));
+							dial.addProgressUnit(p1);
+							int i = 0;
+							for (ModElement mod : references) {
+								GeneratableElement generatableElement = mod.getGeneratableElement();
+								if (generatableElement != null) {
+									// generate mod element
+									mcreator.getGenerator().generateElement(generatableElement);
+								}
+								i++;
+								p1.setPercent((int) (i / (float) references.size() * 100));
+							}
+							p1.markStateOk();
+							dial.hideDialog();
+						}, "RegenerateReferences");
+						t.start();
+						dial.setVisible(true);
+					}
 
 					if (buildNeeded.get())
-						mcreator.actionRegistry.buildWorkspace.doAction();
+						mcreator.getActionRegistry().buildWorkspace.doAction();
 				}
 			}
 		}
@@ -1245,7 +1220,7 @@ import java.util.stream.Collectors;
 		if (name != null) {
 			currentFolder.addChild(new FolderElement(name, currentFolder));
 			mcreator.getWorkspace().markDirty();
-			sectionTabs.get("mods").reloadElements();
+			getVerticalTab(WorkspacePanelMods.class).reloadElements();
 		}
 	}
 
@@ -1256,21 +1231,13 @@ import java.util.stream.Collectors;
 			selected.setName(mcreator.getWorkspace(), newName);
 
 			mcreator.getWorkspace().markDirty();
-			sectionTabs.get("mods").reloadElements();
+			getVerticalTab(WorkspacePanelMods.class).reloadElements();
 		}
 	}
 
-	public synchronized void reloadElementsInCurrentTab() {
-		sectionTabs.get(currentTab).reloadElements();
-	}
-
-	public MCreator getMCreator() {
-		return mcreator;
-	}
-
 	private class FilterModel extends DefaultListModel<IElement> {
-		ArrayList<IElement> items;
-		ArrayList<IElement> filterItems;
+		final ArrayList<IElement> items;
+		final ArrayList<IElement> filterItems;
 
 		private final static Pattern pattern = Pattern.compile("([^\"]\\S*|\".+?\")\\s*");
 
@@ -1336,7 +1303,7 @@ import java.util.stream.Collectors;
 					pat = pat.replaceFirst("f:", "");
 					if (pat.equals("locked") || pat.equals("ok") || pat.equals("err"))
 						filters.add(pat);
-					for (ModElementType<?> type : ModElementTypeLoader.REGISTRY) {
+					for (ModElementType<?> type : mcreator.getGeneratorStats().getSupportedModElementTypes()) {
 						if (pat.equals(type.getReadableName().replace(" ", "").toLowerCase(Locale.ENGLISH))) {
 							metfilters.add(type);
 						}
@@ -1363,6 +1330,15 @@ import java.util.stream.Collectors;
 						return false;
 					}).toList());
 
+			if (!sortDateCreated.isSelected()) {
+				filterItems.sort(Comparator.comparing(IElement::getName));
+			}
+
+			if (desc.isSelected()) {
+				Collections.reverse(filterItems);
+			}
+
+			//noinspection FuseStreamOperations
 			List<ModElement> modElements = items.stream().filter(e -> e instanceof ModElement).map(e -> (ModElement) e)
 					.filter(item -> currentFolder.equals(item.getFolderPath()) || (flattenFolders
 							&& currentFolder.getRecursiveFolderChildren().stream()
@@ -1403,25 +1379,7 @@ import java.util.stream.Collectors;
 								return true;
 						return false;
 					}).collect(Collectors.toList());
-
-			if (!sortDateCreated.isSelected()) {
-				modElements.sort((a, b) -> {
-					if (sortType.isSelected()) {
-						return a.getType().getReadableName().compareTo(b.getType().getReadableName());
-					} else {
-						return a.getName().compareTo(b.getName());
-					}
-				});
-			}
-
-			if (!sortDateCreated.isSelected()) {
-				filterItems.sort(Comparator.comparing(IElement::getName));
-			}
-
-			if (desc.isSelected()) {
-				Collections.reverse(modElements);
-				Collections.reverse(filterItems);
-			}
+			modElements.sort(ModElement.getComparator(mcreator.getWorkspace(), modElements));
 
 			filterItems.addAll(modElements);
 
@@ -1429,7 +1387,7 @@ import java.util.stream.Collectors;
 		}
 	}
 
-	private class WorkspacePanelMods extends AbstractWorkspacePanel {
+	public class WorkspacePanelMods extends AbstractWorkspacePanel {
 
 		private WorkspacePanelMods(JComponent contents) {
 			super(WorkspacePanel.this);
@@ -1477,9 +1435,23 @@ import java.util.stream.Collectors;
 									mcreator.getWorkspace().getModElements().size()));
 				}
 
-				if (mcreator.getWorkspaceSettings().getMCreatorDependencies().contains("mcreator_link")) {
+				Texture icon = CustomTexture.fromName(mcreator.getWorkspace(), TextureType.OTHER,
+						mcreator.getWorkspaceSettings().getModPicture());
+
+				if (icon != null) {
+					ImageIcon imageIcon = icon.getTextureIcon(mcreator.getWorkspace());
+					modElementsBar.setGradientColor(ColorUtils.applyAlpha(
+							ImageUtils.getAverageColor(ImageUtils.toBufferedImage(imageIcon.getImage())), 90));
+					elementsCount.setIcon(IconUtils.resize(imageIcon, 16));
+					modElementsBar.setFractionPoint(0.88f);
+				} else if (mcreator.getWorkspaceSettings().getMCreatorDependencies().contains("mcreator_link")) {
+					modElementsBar.setGradientColor(ColorUtils.applyAlpha(new Color(0xe69c32), 100));
 					elementsCount.setIcon(UIRES.get("16px.link"));
+					modElementsBar.setFractionPoint(0.88f);
 				} else {
+					modElementsBar.setGradientColor(
+							ColorUtils.applyAlpha(Theme.current().getInterfaceAccentColor(), 90));
+					modElementsBar.setFractionPoint(0.91f);
 					elementsCount.setIcon(new EmptyIcon(0, 0));
 				}
 			}
@@ -1488,6 +1460,10 @@ import java.util.stream.Collectors;
 		@Override public void refilterElements() {
 			dml.refilter();
 		}
+	}
+
+	public JPopupMenu getContextMenu() {
+		return contextMenu;
 	}
 
 }
